[project]
name = "backend"
version = "0.1.0"
description = "The base sports_db project that will run all the other portions"
authors = [{ name = "ReAXET", email = "joshua.sturm@outlook.com" }]
dependencies = [
    "prisma>=0.12.0",
    "litestar>=2.6.1",
    "fastapi>=0.110.0",
    "duckdb>=0.10.0",
    "sqlalchemy>=2.0.29",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "nba-api>=1.4.1",
    "nhl-api>=0.0.1",
    "sportsipy @ git+https://github.com/davidjkrause/sportsipy@master",
    "click>=8.1.7",
    "alembic>=1.13.1",
    "pre-commit>=3.7.0",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "pydantic-extra-types>=2.6.0",
    "copier>=9.1.1",
    "psycopg>=3.1.18",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
